style.css
/* ... */
.widget-title {
    margin-bottom: 1em;
    border-bottom: 2px solid #231E1A;
    font-size: 24px;
    font-size: 2.4rem;
}

.widget a {
    font-weight: 700;
    color: #231E1A;
    transition: color 0.3s;
}

.widget a:hover { color: #3B9C61; }

.widget ul,
.widget ol {
    padding: 0;
    margin: -1em 0 0;
    list-style-type: none;
}

.widget li { padding: 1em 0; }

.widget li ul,
.widget li ol { margin-top: 0; }

.widget li li { margin-left: 1.5em; }

.widget_recent_entries li:before,
.widget_recent_comments li:before,
.widget_archive li:before {
    display: block;
    float: left;
    padding-top: 2px;
    margin-left: -2.5em;
    font-family: "fontawesome";
    font-size: 14px;
    font-size: 1.4rem;
} 

.widget_recent_entries li,
.widget_recent_comments li { margin: 0 0 0.5em 2.5em; }

.widget_recent_entries li:before { content: "\f036"; }

.widget_recent_comments li:before { content: "\f075"; }

.widget_archive li { margin: 0 0 0 2.5em; }

.widget_archive li:before { content: "\f187"; }

.widget_nav_menu a,
.widget_pages a {
    display: block;
    padding: 1em 0;
    border-bottom: 1px solid #231E1A;
}

.widget_nav_menu li,
.widget_pages li { padding-top: 0; }

.widget_rss li { margin-bottom: 0.5em; }

.widget_rss .rss-date,
.widget_rss cite {
    display: block;
    font-size: 85%;
}

/* Make sure select elements fit in widgets */
.widget select { max-width: 100%; }

/*--------------------------------------------------------------
10.1 Search widget
--------------------------------------------------------------*/
.widget_search .search-submit { display: none; }

.footer-widgets { margin: 0 auto; }

.footer-widgets .widget-title,
.footer-widgets .widget a:hover {
    color: #fff;
    color: hsl(0, 0%, 100%);
    border-color: #fff;
    border-color: hsl(0, 0%, 100%);
}

.footer-widgets .widget {
    float: left;
    width: 320px;
    margin: 0 4rem 8rem 4rem;
}

.entry-content .search-form {
    padding: 1em;
}

/* Footer widgets responsive */
@media screen and (max-width: 879px) {
    #footer-widgets { width: 100%!important; }

    .footer-widgets .widget {
        float: none;
        width: 100%;
        margin: 0 0 8rem;
    }
}


/*--------------------------------------------------------------
10.2 Arfolio recent posts
--------------------------------------------------------------*/
/* For sidebar */
#artfolio_widget-2 li,
.arp-header { text-align: center; }

.arp-thumbnail {
    display: inline-block;
    position: relative;
    margin-right: 0;
}

.arp-thumbnail img {
    width: 100px;
    height: 100px;
}

.arp-header {
    display: block;
    position: relative;
    width: 100%;
    vertical-align: top;
    border-bottom: 1px solid rgb(101, 98, 93);
}

.arp-title {
    display: block;
    position: relative;
    margin-bottom: 0.5em !important;
}

.arp-meta {
    display: block;
    position: relative;
    font-size: 12px;
}

.arp-author {
    display: none;
}

.arp-time {
    display: inline-block;
    position: relative;
    margin-bottom: 0;
}

#secondary .attachment-artfolio-recent-thumbnails,
#secondary .imagePlugWrapper:hover { transition: border-radius 0.5s; }

#secondary .attachment-artfolio-recent-thumbnails:hover,
#secondary .imagePlugWrapper:hover { border-radius: 50%; }

.imagePlugWrapper {
    display: inline-block;
    width: 100px;
    height: 100px;
    background-color: #D3D3D3;
    text-align: center;
}

.imagePlug {
    font-size: 50px;
    line-height: 100px !important;
    color: #fff;
}

@media screen and ( min-width: 400px ) {
    #artfolio_widget-2 li,
    .arp-header { text-align: left; }

    .arp-thumbnail { margin-right: 1em; }

    .arp-header {
        display: inline-block;
        width: 61%;
        border-bottom: none;
    }

    .arp-meta { font-size: inherit; }
}

/* For index sidebar */
.index-widgets .widget_artfolio_widget {
    display: block;
    position: relative;
    overflow: auto;
    width: 100%;
}

.index-widgets .widget_artfolio_widget ul {
    display: inline-block;
    position: relative;
    float: left;
    overflow: hidden;
    width: 32%;
    box-sizing: border-box;
    margin-right: 1%;

}


.index-widgets .widget_artfolio_widget .arp-thumbnail,
.index-widgets .widget_artfolio_widget .arp-header {
    display: block;
    overflow: hidden;
    margin-right: 0;
}
.index-widgets .widget_artfolio_widget .arp-thumbnail {
    max-height: 220px;
    -webkit-transform:scale(1.0);
}

.index-widgets .widget_artfolio_widget .arp-thumbnail img {
    width: 100%;
    height: auto;
    transition: all 0.5s ease;
}

.index-widgets .widget_artfolio_widget .arp-thumbnail img:hover {
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
}

.index-widgets .widget_artfolio_widget .arp-header {
    width: 100%;
    height: 180px;
    padding: 16px;
    background-color: #262626;
}

.index-widgets .widget_artfolio_widget .arp-title {
    text-transform: uppercase;
    color: #D3D3D3;
    transition: color .5s;
}

.index-widgets .widget_artfolio_widget .arp-title:hover {
    color: #3B9C61;
}

.index-widgets .widget_artfolio_widget .arp-author {
    display: block;
    color: #65625D;
}

.index-widgets .widget_artfolio_widget .category-list {
    display: block;
    position: absolute;
    bottom: 16px;
    left: 16px;
    box-sizing: border-box;
}

.index-widgets .widget_artfolio_widget .category-list a {
    padding-left: 5px;
    border-left: 3px solid #F1B05E;
    text-transform: uppercase;
    font-family: "Open Sans", sans-serif;
    font-weight: normal;
    color: #F1EEE9;
    transition: color .5s;
}

.index-widgets .widget_artfolio_widget .category-list a:hover{
    color: #F1B05E;
}

/* For posts wihout image */
.index-widgets .widget_artfolio_widget .imagePlugWrapper {
    height: 220px;
    width: 100%;
}

.index-widgets .widget_artfolio_widget .imagePlug {
    font-size: 130px;
    line-height: 220px !important;
    color: #fff;
}
/* ... */

